# ctf-2023-challenges

./: .gitattributes  LICENSING.md  README.md  categories.toml  challenge-repository.toml
a-long-time-ago/: README.md  challenge.toml
artemis/: README.md  challenge.toml
asimovs-second-law/: README.md  challenge.toml
blinkenlights-0/: Blinkenlights-0-solve.py  README.md  challenge.toml  solve-sudoBash418.py
blinkenlights-1/: Blinkenlights-1-solve.py  README.md  challenge.toml  solve-sudoBash418.py
blinkenlights-2/: Blinkenlights-2-solve.py  README.md  challenge.toml  solve-sudoBash418.py
botanic-market/: README.md  challenge.toml
botanic-market-0/: README.md  challenge.toml
botanic-market-1/: README.md  challenge.toml
bussin/: README.md  challenge.toml
captured-data/: README.md  challenge.toml  writeup_howtosolve.txt
captureddata/: challenge.toml
coordinates/: README.md  challenge.toml
example/: challenge.toml
git-remembers-all/: README.md  challenge.toml
hacking-through-time/: README.md  challenge.toml
hacking-through-time/source/: .gitignore  .justfile  Cargo.toml  encode_flag.py  flag.txt
hacking-through-time/source/solves/: faketime.txt
hacking-through-time/source/solves/preload/: .justfile  libtimewarp.c
hacking-through-time/source/solves/preload-timelog/: .justfile  analyze_time.py  libtimewarp.c
hacking-through-time/source/src/: flag.rs  main.rs
hashcap-0/: README.md  challenge.toml
hashcap-1/: README.md  (+1 more)
rusty-rev-1/source/smt-solve/: pyproject.toml  solve.py
rusty-rev-1/source/solver/: pyproject.toml  solve.py
(+213 files in other folders)
