[tool.poetry]
name = "smt-solve"
version = "0.1.0"
description = ""
authors = ["sudoBash418 <sudoBash418@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
claripy = "^9.2.25"
attrs = "^22.1.0"

[tool.poetry.dev-dependencies]
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
